<resources>
    <string name="app_name" translatable="false">CarLog</string>
    <string name="action_settings">Settings</string>
    <string name="action_refuel">Tanken</string>
    <string name="changeUsername">Name ändern</string>
    <string name="title_activity_analysis">Auswertung</string>
    <string name="anzahl_fahrten">Anzahl Fahrten:</string>
    <string name="km_gesamt">KM Gesamt:</string>
    <string name="km_heute">KM Heute:</string>
    <string name="verbrauch">Ø Verbrauch</string>
    <string name="geschw">Ø Geschw.</string>
    <string name="fahrer_ausw_hlen">Fahrer Auswählen:</string>
    <string name="fahrt_start">Fahrt Start</string>
    <string name="fahrt_ende">Fahrt Ende</string>
    <string name="ort">Ort:</string>
    <string name="start_ort">Start Ort</string>
    <string name="ziel_ort">Ziel Ort</string>
    <string name="kilometerstand">Kilometerstand:</string>
    <string name="start_km">start km</string>
    <string name="ende_km">ende km</string>
    <string name="geschwindigkeit">Ø Geschwindigkeit</string>
    <string name="start_zeit_00_00_00_00_00" translatable="false">Start Zeit: 00.00. 00:00:00</string>
    <string name="end_zeit_00_00_00_00_00" translatable="false">End Zeit: 00.00. 00:00:00</string>
    <string name="dauer_00_00_00" translatable="false">Dauer: 00:00:00</string>
    <string name="hinzuf_gen">Add</string>
    <string name="l_schen">Delete</string>
    <string name="l_100km" translatable="false">L/100km</string>
    <string name="km_h" translatable="false">km/h</string>
    <string name="km" translatable="false">km</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="refuelsymbol">refuelSymbol</string>
    <string name="ListWithFilter">Liste mit Filter</string>
    <string name="title_activity_list">List</string>
    <string name="fahrer">Fahrer: </string>

    <!--Dummy data:-->
    <string name="_15_09_17_22_58" translatable="false">15.09.17 22:58</string>
    <string name="dauer_22_32" translatable="false">Dauer: 22:32</string>
    <string name="_4_6_l_100km" translatable="false">4.6 L/100km</string>
    <string name="_80_km_h" translatable="false">80 km/h</string>
    <string name="_20_km" translatable="false">20 km</string>
    <string name="zeitbereich">Zeitbereich:</string>
    <string name="art_des_eintrags">Art des Eintrags:</string>
    <string name="selectTime">Select Time</string>
    <string name="selectDate">Select Date</string>
    <string name="richtung">Richtung:</string>
    <string name="logOut">logOut</string>
    <!---->


    <string-array name="refuel_spinner">
        <item>Nur Fahrten</item>
        <item>Nur Tanken</item>
        <item>beides</item>
    </string-array>

    <string-array name="driver_spinner">
        <item>Alle</item>
        <item>Jakob</item>
        <item>Leo</item>
        <item>Leni</item>
        <item>Andere</item>
    </string-array>
    <string name="channel_name">CarLogChannel</string>
    <string name="title_activity_car_log_auto">CarLogAutoActivity</string>
    <string name="km_picker_def" translatable="false">2</string>

    <string name="db_date_format" translatable="false">yy-MM-dd_HH-mm-ss</string>
    <string name="date_format_dmyhm" translatable="false">dd.MM.yy HH:mm</string>
    <string name="date_format_dmhms" translatable="false">dd.MM HH:mm:ss</string>
    <string name="time_format_hms" translatable="false">HH:mm:ss</string>
    <string name="time_format_hm" translatable="false">HH:mm</string>


    <string name="testMenu" translatable="false">Test</string>
    <string name="title_activity_entry_editor">EntryEditor</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="carSettings">Car Settings</string>
    <string name="title_activity_car_settings">CarSettings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="test2">Test2</string>
    <string name="title_activity_new_car">New Car</string>


</resources>
