<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.a8lambda8.carlog.MainActivity">
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_refuel"
        android:orderInCategory="100"
        android:title="@string/action_refuel"
        app:showAsAction="never" />
    <!--<item
        android:id="@+id/action_changeUsername"
        android:orderInCategory="100"
        android:title="@string/changeUsername"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/action_analysis"
        android:orderInCategory="100"
        android:title="@string/title_activity_analysis"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_List"
        android:orderInCategory="100"
        android:title="@string/ListWithFilter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_testMenu"
        android:orderInCategory="100"
        android:title="@string/testMenu"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logOut"
        android:orderInCategory="100"
        android:title="@string/logOut"
        app:showAsAction="never"
        />
    <!--<item
        android:id="@+id/action_registerBT"
        android:orderInCategory="100"
        android:title="register Bluetooth"
        app:showAsAction="ifRoom" />-->
</menu>
